--- a/PM_3/Data_preconditioning_scripts.ipynb
+++ b/PM_3/Data_preconditioning_scripts.ipynb
@@ -50,7 +50,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "env",
    "language": "python",
    "name": "python3"
   },
